html: give mouseover locus tags a background to prevent overlaps

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -567,6 +567,9 @@ table.region-table {
     display: none;
     font-size: 85%;
 }
+.svgene-locustag-background {
+    fill: $body-background;
+}
 
 .cluster-core {
     stroke: black;
